--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- Optional permission for Bluetooth LE support -->
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true" />
 
     <!-- Application -->
     <application
@@ -20,6 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BluetoothManagerApp"
         tools:targetApi="31">
+
         <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
@@ -31,6 +34,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Details Activity -->
+        <activity
+            android:name=".DetailsActivity"
+            android:label="Device Details"
+            android:exported="false">
+        </activity>
+
     </application>
 
 </manifest>
